# mmseqs-convertserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  convertserver_design_document.md
src/: convertalis_fast.cpp  convertserver.cpp
